--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.15",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
