--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/songa1/Rest-API#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0"
