--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install: npm install
 services:
   - postgresql
 before_script:
-  - psql -c 'create database test_db;' -U postgres
+  - psql -c 'create database mybrandtest;' -U postgres
 script: npm test
 after_success: npm run test
