--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "NODE_ENV=test nyc mocha --timeout 120000 ./tests/**.test.js --exit"
+    "test": "NODE_ENV=test nyc mocha --timeout 120000 ./tests/**.test.js --exit",
+    "coveralls": "npm run pretest && jest --coverage && cat ./coverage/lcov.info | coveralls",
+    "coverage": "nyc npm run test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/songa1/Rest-API.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Achille Songa",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/songa1/Rest-API/issues"
@@ -36,6 +38,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.1.0",
+    "jest": "^26.6.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
