--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "NODE_ENV=test nyc mocha --timeout 120000 ./tests/**.test.js --exit",
+    "test": "NODE_ENV=test nyc mocha --timeout 120000 ./tests/**.test.js --detectOpenHandles --exit",
     "coveralls": "jest --coverage && coveralls < coverage/lcov.info",
     "coverage": "nyc npm run test"
   },
