--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "NODE_ENV=test nyc mocha --timeout 120000 ./tests/**.test.js --detectOpenHandles --exit",
-    "coveralls": "jest --coverage && coveralls < coverage/lcov.info",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "coverage": "nyc npm run test"
   },
   "repository": {
