--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
     "sinon": "^9.2.1",
+    "superagent": "^6.1.0",
     "supertest": "^6.0.1"
   }
 }
